Remember tags of known users
